--- a/shared/src/l10n/l10n-es-MX.json
+++ b/shared/src/l10n/l10n-es-MX.json
@@ -20,7 +20,9 @@
             "errno7": "contraseña ausente",
             "errno8": "contraseña incorrecta",
             "errno9": "algo ha salido mal y falló tu entrada al sistema",
-            "errno10": "algo ha salido mal al tratar de mostrarte la página de editar perfil. por favor verifica que hayas entrado al sistema con tu cuenta antes de intentar de nuevo."
+            "errno10": "algo ha salido mal al tratar de mostrarte la página de editar perfil. por favor verifica que hayas entrado al sistema con tu cuenta antes de intentar de nuevo.",
+            "errno11": "no se ha completado el proceso de verificación de correo electrónico para esta cuenta",
+            "errno12": "por el momento, el estatus de esta cuenta no permite la entrada al sistema"
         },
         "Infos": {
             "infono1": "la verificación ha sido exitosa",
