--- a/shared/src/l10n/backoffice/l10n-en-US.json
+++ b/shared/src/l10n/backoffice/l10n-en-US.json
@@ -1,1 +1,18 @@
-{}
+{
+    "locales": ["en-US"],
+    "formats": {"number": {}, "date": {}, "time": {}},
+    "messages": {
+        "AccountVerificationEmail": {
+            "title": "Slangs.Co - email verification",
+            "body": {
+                "text": "Welcome to Slangs.Co! \n\n You're on your way to becoming a member of the coolest site for sharing and learning about slangs and other modern definitions. \n\n Click on the following link to activate your account: \n [{prefilledUrl}]. \n\n If the link above doesn't work, try the following one along with these codes: \n [{plainUrl}] \n *email*: {recipientAddress} \n *verification code*: {accountActivationCode} \n\n\n Thanks! \n\n Yours, \n The Slangs.Co team."
+            }
+        },
+        "PasswordRecoveryEmail": {
+            "title": "Slangs.Co - Reset password",
+            "body": {
+                "text": "Dear Slangs.Co user, \n\n You can now reset your password by clicking the following link: \n [{prefilledUrl}] \n\n If the link above doesn't work, you can try this one along with these codes: \n [{plainUrl}] \n *email*: {recipientAddress} \n *password reset code*: {passwordResetCode} \n\n\n Thanks for being part of the Slangs.Co community! \n\n Yours, \n The Slangs.Co team."
+            }
+        }
+    }
+}
